--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <title>Meteo</title>
   </head>
 <body ng-app="meteoApp">
-  
-  <div ui-view>
-    NOTHING
-  </div>
+
+  <div ui-view></div>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
-  <script type="text/javascript" src="js/uiRouter.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/lodash.js"></script>
 
 </body>
