--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Meteo</title>
   </head>
-<body >
+<body>
 
   <div ui-view></div>
 
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
   <script type="text/javascript" src="js/lodash.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/services/controller.js"></script>
+  <script type="text/javascript" src="js/controller.js"></script>
 
 </body>
 </html>
